# Secure-Cloud-Storage

./: CMakeLists.txt  README.md
files/: sample.md  sample.txt
resources/certificates/: CA_cert.pem  CA_crl.pem  Francesco_cert.pem  Luca_cert.pem  Salvatore_cert.pem  Server_cert.pem
resources/encrpyted_private_keys/: Server_key.pem
resources/encrypted_private_keys/: Francesco_key.pem  Luca_key.pem  Salvatore_key.pem
resources/private_keys/: Francesco_key.pem  Luca_key.pem  Salvatore_key.pem  Server_key.pem
resources/public_keys/: Francesco_key.pem  Luca_key.pem  Salvatore_key.pem
src/crypto/: AesGcm.cpp  AesGcm.h  CertificateManager.cpp  CertificateManager.h  DiffieHellman.cpp  DiffieHellman.h  DigitalSignatureManager.cpp  DigitalSignatureManager.h  Hash.cpp  Hash.h  Sha256.cpp  Sha256.h
src/messages/: Authentication.cpp  Authentication.h  CodesManager.h  Delete.cpp  Delete.h  Download.cpp  Download.h  Generic.cpp  Generic.h  List.cpp  List.h  Logout.cpp  Logout.h  Rename.cpp  Rename.h  SimpleMessage.cpp  SimpleMessage.h  Update.h  Upload.cpp  Upload.h
src/modules/: Client.cpp  Client.h  ClientMain.cpp  Server.cpp  Server.h  ServerMain.cpp  ServerMain.h
src/utils/: Config.h  ExtractPublicKey.cpp  FileManager.cpp  FileManager.h  SocketManager.cpp  SocketManager.h
test/: AesGcmTest.cpp  CertificateManagerTest.cpp  DiffieHellmanTest.cpp  DigitalSignatureManagerTest.cpp  FileManagerTest.cpp  HashTest.cpp  KeyTest.cpp  SocketManagerTest.cpp
